# TinyAsan

./: .gitignore  CMakeLists.txt  build.sh  readme.md
include/: CMakeLists.txt  stacktrace.h  tiny_sanitizer.hpp
others/: macro_for_static_allocator.cpp  new_handler.cpp  operatornew.cpp  placementnew.cpp  pool_alloc.cpp  pre_allocate_class1.cpp  static_allocator.cpp  watch_alllocator.cpp
src/: CMakeLists.txt  tiny_sanitizer.cpp
test/: CMakeLists.txt  mynew_test.cpp  print_stack_test.cpp  tiny_sanitizer_test.cpp
